--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "reactstrap": "^9.1.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.20.0",
+    "eslint": "^8.23.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-next": "12.2.3",
+    "eslint-plugin-react": "^7.31.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
   }
