--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "file-loader": "^6.2.0",
-    "next": "12.2.3",
-    "react": "18.2.0",
+    "next": "^12.2.3",
+    "react": "^18.2.0",
     "react-animated-slider": "^2.0.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-slideshow-image": "^4.0.4",
     "reactstrap": "^9.1.2"
