--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "crypto-js": "^4.1.1",
     "file-loader": "^6.2.0",
     "next": "^12.2.3",
     "react": "^18.2.0",
