--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "crypto-js": "^4.1.1",
     "file-loader": "^6.2.0",
+    "http-proxy-server": "^0.0.6",
     "next": "^12.2.3",
     "react": "^18.2.0",
     "react-animated-slider": "^2.0.0",
