--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.0.11",
     "crypto-js": "^4.1.1",
     "file-loader": "^6.2.0",
     "http-proxy-server": "^0.0.6",
@@ -19,8 +20,10 @@
     "react": "^18.2.0",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-slideshow-image": "^4.0.4",
+    "react-star-ratings": "^2.3.0",
     "reactstrap": "^9.1.2"
   },
   "devDependencies": {
