--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.11",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.2",
     "file-loader": "^6.2.0",
     "http-proxy-server": "^0.0.6",
+    "mongoose": "^6.6.1",
     "next": "^12.2.3",
+    "next-connect": "^0.13.0",
     "react": "^18.2.0",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^18.2.0",
