--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gstdm_manual",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.test.hotelbeds.com",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,6 +18,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.2",
     "file-loader": "^6.2.0",
+    "http-proxy-middleware": "^2.0.6",
     "http-proxy-server": "^0.0.6",
     "mongoose": "^6.6.1",
     "next": "^12.2.3",
