--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@mui/material": "^5.10.16",
+    "@next/font": "^13.0.5",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.2",
@@ -31,6 +35,7 @@
     "react-router-dom": "^6.4.1",
     "react-slideshow-image": "^4.0.4",
     "react-star-ratings": "^2.3.0",
+    "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.2"
   },
   "devDependencies": {
