--- a/web.config
+++ b/web.config
@@ -152,5 +152,7 @@
     
     -->
 
+      <customErrors mode="Off" />
+      <httpErrors errorMode="Detailed"></httpErrors>
   </system.webServer>
 </configuration>
